--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -1,9 +1,10 @@
 stack:
 	cc -g -O0 -c -o main.o main.c
 	cc -g -O0 -c -o stack.o stack.c
+	cc -g -O0 -c -o stack_prob_1.o stack_prob_1.c
 clean:
 	rm -rf stack *.o
 
 install:
-	gcc -g -O0 main.o stack.o -o stack
+	gcc -g -O0 main.o stack.o stack_prob_1.o -o stack
 
