Committing optimized Makefile.

--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -1,3 +1,5 @@
+OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o
+
 stack:
 	cc -g -O0 -c -o main.o main.c
 	cc -g -O0 -c -o stack.o stack.c
@@ -7,6 +9,6 @@ stack:
 clean:
 	rm -rf stack *.o
 
-install:
-	gcc -g -O0 main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o -o stack
+install: $(OBJS)
+	gcc -g -O0 -o $@ $(OBJS) -o stack
 
