Solving problem of parantheses mismatch.

--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -1,4 +1,4 @@
-OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o
+OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o stack_prob_4.o
 
 stack:
 	cc -g -O0 -c -o main.o main.c
@@ -6,6 +6,8 @@ stack:
 	cc -g -O0 -c -o stack_prob_1.o stack_prob_1.c
 	cc -g -O0 -c -o stack_prob_2.o stack_prob_2.c
 	cc -g -O0 -c -o stack_prob_3.o stack_prob_3.c
+	cc -g -O0 -c -o stack_prob_4.o stack_prob_4.c
+
 clean:
 	rm -rf stack *.o
 
