get_min of stack in O(1)

--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -1,4 +1,4 @@
-OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o stack_prob_4.o stack_prob_5.o stack_prob_6.o stack_prob_7.o stack_prob_8.o
+OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o stack_prob_4.o stack_prob_5.o stack_prob_6.o stack_prob_7.o stack_prob_8.o stack_prob_9.o
 
 stack:
 	cc -g -O0 -c -o main.o main.c
@@ -11,6 +11,7 @@ stack:
 	cc -g -O0 -c -o stack_prob_6.o stack_prob_6.c
 	cc -g -O0 -c -o stack_prob_7.o stack_prob_7.c
 	cc -g -O0 -c -o stack_prob_8.o stack_prob_8.c
+	cc -g -O0 -c -o stack_prob_9.o stack_prob_9.c
 
 clean:
 	rm -rf stack *.o
