Bringing all library data structures under single executables.

--- a/src/avl_tree/Makefile
+++ b/src/avl_tree/Makefile
@@ -1,9 +1,9 @@
-avl:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o avl_tree_tc.o avl_tree_tc.c
 	cc -g -O0 -c -o avl.o avl.c
 clean:
 	rm -rf avl *.o
 
 install:
-	gcc -g -O0 main.o avl.o -o avl
+	gcc -g -O0 avl_tree_tc.o avl.o -o avl
 
