--- a/src/dll/Makefile
+++ b/src/dll/Makefile
@@ -1,9 +1,9 @@
-dll:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o dll_tc.o dll_tc.c
 	cc -g -O0 -c -o dll.o dll.c
 clean:
 	rm -rf dll *.o
 
 install:
-	gcc -g -O0 main.o dll.o -o dll
+	gcc -g -O0 dll_tc.o dll.o -o dll
 
