--- a/src/queue/Makefile
+++ b/src/queue/Makefile
@@ -1,9 +1,9 @@
-queue:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o queue_tc.o queue_tc.c
 	cc -g -O0 -c -o queue.o queue.c
 clean:
 	rm -rf queue *.o
 
 install:
-	gcc -g -O0 main.o queue.o -o queue
+	gcc -g -O0 queue_tc.o queue.o -o queue
 
