--- a/src/sll/Makefile
+++ b/src/sll/Makefile
@@ -1,9 +1,9 @@
-sll:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o sll_tc.o sll_tc.c
 	cc -g -O0 -c -o sll.o sll.c
 clean:
 	rm -rf sll *.o
 
 install:
-	gcc -g -O0 main.o sll.o -o sll
+	gcc -g -O0 sll_tc.o sll.o -o sll
 
