--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -1,7 +1,7 @@
-OBJS = main.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o stack_prob_4.o stack_prob_5.o stack_prob_6.o stack_prob_7.o stack_prob_8.o stack_prob_9.o
+OBJS = stack_tc.o stack.o stack_prob_1.o stack_prob_2.o stack_prob_3.o stack_prob_4.o stack_prob_5.o stack_prob_6.o stack_prob_7.o stack_prob_8.o stack_prob_9.o
 
-stack:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o stack_tc.o stack_tc.c
 	cc -g -O0 -c -o stack.o stack.c
 	cc -g -O0 -c -o stack_prob_1.o stack_prob_1.c
 	cc -g -O0 -c -o stack_prob_2.o stack_prob_2.c
