--- a/src/bst/Makefile
+++ b/src/bst/Makefile
@@ -1,9 +1,9 @@
-bst:
-	cc -g -O0 -c -o main.o main.c
+all:
+	cc -g -O0 -c -o bst_tc.o bst_tc.c
 	cc -g -O0 -c -o bst.o bst.c
 clean:
 	rm -rf bst *.o
 
 install:
-	gcc -g -O0 main.o bst.o -o bst
+	gcc -g -O0 bst_tc.o bst.o -o bst
 
