Reversing linked list using iterative and recursive methods Stack problem 13

--- a/src/sll/Makefile
+++ b/src/sll/Makefile
@@ -1,6 +1,7 @@
 all:
 	cc -g -O0 -c -o sll_tc.o sll_tc.c
 	cc -g -O0 -c -o sll.o sll.c
+	cc -g -O0 -c -o sll_prob_1.o sll_prob_1.c
 clean:
 	rm -rf sll *.o
 
