--- a/src/b_plus_tree/Makefile
+++ b/src/b_plus_tree/Makefile
@@ -1,5 +1,6 @@
 all:
 	cc -g -O0 -c -o b_plus_tree_tc.o b_plus_tree_tc.c
+	cc -g -O0 -c -o b_plus_tree_internal.o b_plus_tree_internal.c
 	cc -g -O0 -c -o b_plus_tree.o b_plus_tree.c
 clean:
 	rm -rf b_plus_tree *.o
