Committing the more structured code.

--- a/src/b_plus_tree/Makefile
+++ b/src/b_plus_tree/Makefile
@@ -2,6 +2,9 @@ all:
 	cc -g -O0 -c -o b_plus_tree_tc.o b_plus_tree_tc.c
 	cc -g -O0 -c -o b_plus_tree_internal.o b_plus_tree_internal.c
 	cc -g -O0 -c -o b_plus_tree.o b_plus_tree.c
+	cc -g -O0 -c -o b_plus_tree_insert.o b_plus_tree_insert.c
+	cc -g -O0 -c -o b_plus_tree_delete.o b_plus_tree_delete.c
+
 clean:
 	rm -rf b_plus_tree *.o
 
