--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 SHELL=/bin/bash
-SUBDIRS := common bst dll queue scll sll stack avl_tree heap graph trie b_plus_tree
+SUBDIRS := common bst dll queue scll sll stack avl_tree heap graph trie b_plus_tree \
+	rb_tree
 
 .PHONY : all $(SUBDIRS)
 
