Committing support for insertion of elements into RBTree. Also, committing multiple test cases.

--- a/src/rb_tree/Makefile
+++ b/src/rb_tree/Makefile
@@ -1,6 +1,7 @@
 all:
 	cc -g -O0 -c -o rb_tree_tc.o rb_tree_tc.c
 	cc -g -O0 -c -o rb_tree.o rb_tree.c
+	cc -g -O0 -c -o rb_tree_insert.o rb_tree_insert.c
 clean:
 	rm -rf rb_tree *.o
 
