Committing solutions to new problems.

--- a/src/miscellaneous/Makefile
+++ b/src/miscellaneous/Makefile
@@ -1,7 +1,10 @@
-OBJS = 2d_arr.o main.o
+OBJS = pattern_detect.o 2d_arr.o resize_arr.o drop_duplicates.o main.o
 
 all:
 	cc -g -O0 -c -o 2d_arr.o 2d_arr.c
+	cc -g -O0 -c -o pattern_detect.o pattern_detect.c
+	cc -g -O0 -c -o resize_arr.o resize_arr.c
+	cc -g -O0 -c -o drop_duplicates.o drop_duplicates.c
 	cc -g -O0 -c -o main.o main.c
 
 clean:
